
[TestStrictBooleanExpressionsRule/invalid-0 - 1]
Diagnostic 1: conditionErrorNumber (2:13 - 2:17)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   1 | 
   2 | if (true && 1 + 1) {
     |             ~~~~~
   3 | }
---

[TestStrictBooleanExpressionsRule/invalid-1 - 1]
Diagnostic 1: conditionErrorString (1:17 - 1:25)
Message: Unexpected string value in conditional. A string can be falsy (empty string) or truthy.
   1 | while (false || 'a' + 'b') {}
     |                 ~~~~~~~~~
---

[TestStrictBooleanExpressionsRule/invalid-2 - 1]
Diagnostic 1: conditionErrorObject (1:34 - 1:34)
Message: Unexpected object value in conditional. An object is always truthy.
   1 | (x: object) => (true || false || x ? true : false);
     |                                  ~
---

[TestStrictBooleanExpressionsRule/invalid-3 - 1]
Diagnostic 1: conditionErrorString (1:6 - 1:7)
Message: Unexpected string value in conditional. A string can be falsy (empty string) or truthy.
   1 | if (('' && {}) || (0 && void 0)) { }
     |      ~~

Diagnostic 2: conditionErrorObject (1:12 - 1:13)
Message: Unexpected object value in conditional. An object is always truthy.
   1 | if (('' && {}) || (0 && void 0)) { }
     |            ~~

Diagnostic 3: conditionErrorNumber (1:20 - 1:20)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   1 | if (('' && {}) || (0 && void 0)) { }
     |                    ~

Diagnostic 4: conditionErrorNullish (1:25 - 1:30)
Message: Unexpected nullish value in conditional. The expression is always falsy.
   1 | if (('' && {}) || (0 && void 0)) { }
     |                         ~~~~~~
---

[TestStrictBooleanExpressionsRule/invalid-4 - 1]
Diagnostic 1: conditionErrorString (3:9 - 3:26)
Message: Unexpected string value in conditional. A string can be falsy (empty string) or truthy.
   2 |         declare const array: string[];
   3 |         array.some(x => x);
     |         ~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestStrictBooleanExpressionsRule/invalid-5 - 1]
Diagnostic 1: conditionErrorString (3:6 - 3:7)
Message: Unexpected string value in conditional. A string can be falsy (empty string) or truthy.
   2 | declare const foo: true & { __BRAND: 'Foo' };
   3 | if (('' && foo) || (0 && void 0)) { }
     |      ~~
   4 |       

Diagnostic 2: conditionErrorNumber (3:21 - 3:21)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   2 | declare const foo: true & { __BRAND: 'Foo' };
   3 | if (('' && foo) || (0 && void 0)) { }
     |                     ~
   4 |       

Diagnostic 3: conditionErrorNullish (3:26 - 3:31)
Message: Unexpected nullish value in conditional. The expression is always falsy.
   2 | declare const foo: true & { __BRAND: 'Foo' };
   3 | if (('' && foo) || (0 && void 0)) { }
     |                          ~~~~~~
   4 |       
---

[TestStrictBooleanExpressionsRule/invalid-6 - 1]
Diagnostic 1: conditionErrorString (3:6 - 3:7)
Message: Unexpected string value in conditional. A string can be falsy (empty string) or truthy.
   2 | declare const foo: false & { __BRAND: 'Foo' };
   3 | if (('' && {}) || (foo && void 0)) { }
     |      ~~
   4 |       

Diagnostic 2: conditionErrorObject (3:12 - 3:13)
Message: Unexpected object value in conditional. An object is always truthy.
   2 | declare const foo: false & { __BRAND: 'Foo' };
   3 | if (('' && {}) || (foo && void 0)) { }
     |            ~~
   4 |       

Diagnostic 3: conditionErrorNullish (3:27 - 3:32)
Message: Unexpected nullish value in conditional. The expression is always falsy.
   2 | declare const foo: false & { __BRAND: 'Foo' };
   3 | if (('' && {}) || (foo && void 0)) { }
     |                           ~~~~~~
   4 |       
---

[TestStrictBooleanExpressionsRule/invalid-7 - 1]
Diagnostic 1: conditionErrorString (1:1 - 1:5)
Message: Unexpected string value in conditional. A string can be falsy (empty string) or truthy.
   1 | 'asd' && 123 && [] && null;
     | ~~~~~

Diagnostic 2: conditionErrorNumber (1:10 - 1:12)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   1 | 'asd' && 123 && [] && null;
     |          ~~~

Diagnostic 3: conditionErrorObject (1:17 - 1:18)
Message: Unexpected object value in conditional. An object is always truthy.
   1 | 'asd' && 123 && [] && null;
     |                 ~~
---

[TestStrictBooleanExpressionsRule/invalid-8 - 1]
Diagnostic 1: conditionErrorString (1:1 - 1:5)
Message: Unexpected string value in conditional. A string can be falsy (empty string) or truthy.
   1 | 'asd' || 123 || [] || null;
     | ~~~~~

Diagnostic 2: conditionErrorNumber (1:10 - 1:12)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   1 | 'asd' || 123 || [] || null;
     |          ~~~

Diagnostic 3: conditionErrorObject (1:17 - 1:18)
Message: Unexpected object value in conditional. An object is always truthy.
   1 | 'asd' || 123 || [] || null;
     |                 ~~
---

[TestStrictBooleanExpressionsRule/invalid-9 - 1]
Diagnostic 1: conditionErrorNumber (1:10 - 1:10)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   1 | let x = (1 && 'a' && null) || 0 || '' || {};
     |          ~

Diagnostic 2: conditionErrorString (1:15 - 1:17)
Message: Unexpected string value in conditional. A string can be falsy (empty string) or truthy.
   1 | let x = (1 && 'a' && null) || 0 || '' || {};
     |               ~~~

Diagnostic 3: conditionErrorNullish (1:22 - 1:25)
Message: Unexpected nullish value in conditional. The expression is always falsy.
   1 | let x = (1 && 'a' && null) || 0 || '' || {};
     |                      ~~~~

Diagnostic 4: conditionErrorNumber (1:31 - 1:31)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   1 | let x = (1 && 'a' && null) || 0 || '' || {};
     |                               ~

Diagnostic 5: conditionErrorString (1:36 - 1:37)
Message: Unexpected string value in conditional. A string can be falsy (empty string) or truthy.
   1 | let x = (1 && 'a' && null) || 0 || '' || {};
     |                                    ~~
---

[TestStrictBooleanExpressionsRule/invalid-10 - 1]
Diagnostic 1: conditionErrorNumber (1:9 - 1:9)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   1 | return (1 || 'a' || null) && 0 && '' && {};
     |         ~

Diagnostic 2: conditionErrorString (1:14 - 1:16)
Message: Unexpected string value in conditional. A string can be falsy (empty string) or truthy.
   1 | return (1 || 'a' || null) && 0 && '' && {};
     |              ~~~

Diagnostic 3: conditionErrorNullish (1:21 - 1:24)
Message: Unexpected nullish value in conditional. The expression is always falsy.
   1 | return (1 || 'a' || null) && 0 && '' && {};
     |                     ~~~~

Diagnostic 4: conditionErrorNumber (1:30 - 1:30)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   1 | return (1 || 'a' || null) && 0 && '' && {};
     |                              ~

Diagnostic 5: conditionErrorString (1:35 - 1:36)
Message: Unexpected string value in conditional. A string can be falsy (empty string) or truthy.
   1 | return (1 || 'a' || null) && 0 && '' && {};
     |                                   ~~
---

[TestStrictBooleanExpressionsRule/invalid-11 - 1]
Diagnostic 1: conditionErrorNumber (1:14 - 1:14)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   1 | console.log((1 && []) || ('a' && {}));
     |              ~

Diagnostic 2: conditionErrorObject (1:19 - 1:20)
Message: Unexpected object value in conditional. An object is always truthy.
   1 | console.log((1 && []) || ('a' && {}));
     |                   ~~

Diagnostic 3: conditionErrorString (1:27 - 1:29)
Message: Unexpected string value in conditional. A string can be falsy (empty string) or truthy.
   1 | console.log((1 && []) || ('a' && {}));
     |                           ~~~
---

[TestStrictBooleanExpressionsRule/invalid-12 - 1]
Diagnostic 1: conditionErrorNumber (1:6 - 1:6)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   1 | if ((1 && []) || ('a' && {})) void 0;
     |      ~

Diagnostic 2: conditionErrorObject (1:11 - 1:12)
Message: Unexpected object value in conditional. An object is always truthy.
   1 | if ((1 && []) || ('a' && {})) void 0;
     |           ~~

Diagnostic 3: conditionErrorString (1:19 - 1:21)
Message: Unexpected string value in conditional. A string can be falsy (empty string) or truthy.
   1 | if ((1 && []) || ('a' && {})) void 0;
     |                   ~~~

Diagnostic 4: conditionErrorObject (1:26 - 1:27)
Message: Unexpected object value in conditional. An object is always truthy.
   1 | if ((1 && []) || ('a' && {})) void 0;
     |                          ~~
---

[TestStrictBooleanExpressionsRule/invalid-13 - 1]
Diagnostic 1: conditionErrorNullish (1:9 - 1:12)
Message: Unexpected nullish value in conditional. The expression is always falsy.
   1 | let x = null || 0 || 'a' || [] ? {} : undefined;
     |         ~~~~

Diagnostic 2: conditionErrorNumber (1:17 - 1:17)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   1 | let x = null || 0 || 'a' || [] ? {} : undefined;
     |                 ~

Diagnostic 3: conditionErrorString (1:22 - 1:24)
Message: Unexpected string value in conditional. A string can be falsy (empty string) or truthy.
   1 | let x = null || 0 || 'a' || [] ? {} : undefined;
     |                      ~~~

Diagnostic 4: conditionErrorObject (1:29 - 1:30)
Message: Unexpected object value in conditional. An object is always truthy.
   1 | let x = null || 0 || 'a' || [] ? {} : undefined;
     |                             ~~
---

[TestStrictBooleanExpressionsRule/invalid-14 - 1]
Diagnostic 1: conditionErrorNullish (1:10 - 1:13)
Message: Unexpected nullish value in conditional. The expression is always falsy.
   1 | return !(null || 0 || 'a' || []);
     |          ~~~~

Diagnostic 2: conditionErrorNumber (1:18 - 1:18)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   1 | return !(null || 0 || 'a' || []);
     |                  ~

Diagnostic 3: conditionErrorString (1:23 - 1:25)
Message: Unexpected string value in conditional. A string can be falsy (empty string) or truthy.
   1 | return !(null || 0 || 'a' || []);
     |                       ~~~

Diagnostic 4: conditionErrorObject (1:30 - 1:31)
Message: Unexpected object value in conditional. An object is always truthy.
   1 | return !(null || 0 || 'a' || []);
     |                              ~~
---

[TestStrictBooleanExpressionsRule/invalid-15 - 1]
Diagnostic 1: conditionErrorNullish (1:1 - 1:4)
Message: Unexpected nullish value in conditional. The expression is always falsy.
   1 | null || {};
     | ~~~~
---

[TestStrictBooleanExpressionsRule/invalid-16 - 1]
Diagnostic 1: conditionErrorNullish (1:1 - 1:9)
Message: Unexpected nullish value in conditional. The expression is always falsy.
   1 | undefined && [];
     | ~~~~~~~~~
---

[TestStrictBooleanExpressionsRule/invalid-17 - 1]
Diagnostic 1: conditionErrorNullish (3:5 - 3:5)
Message: Unexpected nullish value in conditional. The expression is always falsy.
   2 | declare const x: null;
   3 | if (x) {
     |     ~
   4 | }
---

[TestStrictBooleanExpressionsRule/invalid-18 - 1]
Diagnostic 1: conditionErrorNullish (1:20 - 1:20)
Message: Unexpected nullish value in conditional. The expression is always falsy.
   1 | (x: undefined) => !x;
     |                    ~
---

[TestStrictBooleanExpressionsRule/invalid-19 - 1]
Diagnostic 1: conditionErrorNullish (1:40 - 1:40)
Message: Unexpected nullish value in conditional. The expression is always falsy.
   1 | <T extends null | undefined>(x: T) => (x ? 1 : 0);
     |                                        ~
---

[TestStrictBooleanExpressionsRule/invalid-20 - 1]
Diagnostic 1: conditionErrorNullish (1:28 - 1:28)
Message: Unexpected nullish value in conditional. The expression is always falsy.
   1 | <T extends null>(x: T) => (x ? 1 : 0);
     |                            ~
---

[TestStrictBooleanExpressionsRule/invalid-21 - 1]
Diagnostic 1: conditionErrorNullish (1:33 - 1:33)
Message: Unexpected nullish value in conditional. The expression is always falsy.
   1 | <T extends undefined>(x: T) => (x ? 1 : 0);
     |                                 ~
---

[TestStrictBooleanExpressionsRule/invalid-22 - 1]
Diagnostic 1: conditionErrorObject (1:1 - 1:2)
Message: Unexpected object value in conditional. An object is always truthy.
   1 | [] || 1;
     | ~~
---

[TestStrictBooleanExpressionsRule/invalid-23 - 1]
Diagnostic 1: conditionErrorObject (1:2 - 1:3)
Message: Unexpected object value in conditional. An object is always truthy.
   1 | ({}) && 'a';
     |  ~~
---

[TestStrictBooleanExpressionsRule/invalid-24 - 1]
Diagnostic 1: conditionErrorObject (3:5 - 3:5)
Message: Unexpected object value in conditional. An object is always truthy.
   2 | declare const x: symbol;
   3 | if (x) {
     |     ~
   4 | }
---

[TestStrictBooleanExpressionsRule/invalid-25 - 1]
Diagnostic 1: conditionErrorObject (1:21 - 1:21)
Message: Unexpected object value in conditional. An object is always truthy.
   1 | (x: () => void) => !x;
     |                     ~
---

[TestStrictBooleanExpressionsRule/invalid-26 - 1]
Diagnostic 1: conditionErrorObject (1:30 - 1:30)
Message: Unexpected object value in conditional. An object is always truthy.
   1 | <T extends object>(x: T) => (x ? 1 : 0);
     |                              ~
---

[TestStrictBooleanExpressionsRule/invalid-27 - 1]
Diagnostic 1: conditionErrorObject (1:41 - 1:41)
Message: Unexpected object value in conditional. An object is always truthy.
   1 | <T extends Object | Function>(x: T) => (x ? 1 : 0);
     |                                         ~
---

[TestStrictBooleanExpressionsRule/invalid-28 - 1]
Diagnostic 1: conditionErrorObject (1:37 - 1:37)
Message: Unexpected object value in conditional. An object is always truthy.
   1 | <T extends { a: number }>(x: T) => (x ? 1 : 0);
     |                                     ~
---

[TestStrictBooleanExpressionsRule/invalid-29 - 1]
Diagnostic 1: conditionErrorObject (1:34 - 1:34)
Message: Unexpected object value in conditional. An object is always truthy.
   1 | <T extends () => void>(x: T) => (x ? 1 : 0);
     |                                  ~
---

[TestStrictBooleanExpressionsRule/invalid-30 - 1]
Diagnostic 1: conditionErrorString (1:8 - 1:9)
Message: Unexpected string value in conditional. A string can be falsy (empty string) or truthy.
   1 | while ('') {}
     |        ~~
---

[TestStrictBooleanExpressionsRule/invalid-31 - 1]
Diagnostic 1: conditionErrorString (1:8 - 1:12)
Message: Unexpected string value in conditional. A string can be falsy (empty string) or truthy.
   1 | for (; 'foo'; ) {}
     |        ~~~~~
---

[TestStrictBooleanExpressionsRule/invalid-32 - 1]
Diagnostic 1: conditionErrorString (3:5 - 3:5)
Message: Unexpected string value in conditional. A string can be falsy (empty string) or truthy.
   2 | declare const x: string;
   3 | if (x) {
     |     ~
   4 | }
---

[TestStrictBooleanExpressionsRule/invalid-33 - 1]
Diagnostic 1: conditionErrorString (1:17 - 1:17)
Message: Unexpected string value in conditional. A string can be falsy (empty string) or truthy.
   1 | (x: string) => !x;
     |                 ~
---

[TestStrictBooleanExpressionsRule/invalid-34 - 1]
Diagnostic 1: conditionErrorString (1:30 - 1:30)
Message: Unexpected string value in conditional. A string can be falsy (empty string) or truthy.
   1 | <T extends string>(x: T) => (x ? 1 : 0);
     |                              ~
---

[TestStrictBooleanExpressionsRule/invalid-35 - 1]
Diagnostic 1: conditionErrorNumber (1:8 - 1:9)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   1 | while (0n) {}
     |        ~~
---

[TestStrictBooleanExpressionsRule/invalid-36 - 1]
Diagnostic 1: conditionErrorNumber (1:8 - 1:10)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   1 | for (; 123; ) {}
     |        ~~~
---

[TestStrictBooleanExpressionsRule/invalid-37 - 1]
Diagnostic 1: conditionErrorNumber (3:5 - 3:5)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   2 | declare const x: number;
   3 | if (x) {
     |     ~
   4 | }
---

[TestStrictBooleanExpressionsRule/invalid-38 - 1]
Diagnostic 1: conditionErrorNumber (1:17 - 1:17)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   1 | (x: bigint) => !x;
     |                 ~
---

[TestStrictBooleanExpressionsRule/invalid-39 - 1]
Diagnostic 1: conditionErrorNumber (1:30 - 1:30)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   1 | <T extends number>(x: T) => (x ? 1 : 0);
     |                              ~
---

[TestStrictBooleanExpressionsRule/invalid-40 - 1]
Diagnostic 1: conditionErrorNumber (1:2 - 1:13)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   1 | ![]['length']; // doesn't count as array.length when computed
     |  ~~~~~~~~~~~~
---

[TestStrictBooleanExpressionsRule/invalid-41 - 1]
Diagnostic 1: conditionErrorNumber (3:5 - 3:15)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   2 | declare const a: any[] & { notLength: number };
   3 | if (a.notLength) {
     |     ~~~~~~~~~~~
   4 | }
---

[TestStrictBooleanExpressionsRule/invalid-42 - 1]
Diagnostic 1: conditionErrorNumber (2:6 - 2:14)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   1 | 
   2 | if (![].length) {
     |      ~~~~~~~~~
   3 | }
---

[TestStrictBooleanExpressionsRule/invalid-43 - 1]
Diagnostic 1: conditionErrorNumber (2:18 - 2:25)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   1 | 
   2 | (a: number[]) => a.length && '...';
     |                  ~~~~~~~~
   3 |       
---

[TestStrictBooleanExpressionsRule/invalid-44 - 1]
Diagnostic 1: conditionErrorNumber (2:35 - 2:42)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   1 | 
   2 | <T extends unknown[]>(...a: T) => a.length || 'empty';
     |                                   ~~~~~~~~
   3 |       
---

[TestStrictBooleanExpressionsRule/invalid-45 - 1]
Diagnostic 1: conditionErrorOther (3:5 - 3:5)
Message: Unexpected value in conditional. A union of different types has inconsistent truthiness.
   2 | declare const x: string | number;
   3 | if (x) {
     |     ~
   4 | }
---

[TestStrictBooleanExpressionsRule/invalid-46 - 1]
Diagnostic 1: conditionErrorOther (1:26 - 1:26)
Message: Unexpected value in conditional. A union of different types has inconsistent truthiness.
   1 | (x: bigint | string) => !x;
     |                          ~
---

[TestStrictBooleanExpressionsRule/invalid-47 - 1]
Diagnostic 1: conditionErrorOther (1:48 - 1:48)
Message: Unexpected value in conditional. A union of different types has inconsistent truthiness.
   1 | <T extends number | bigint | string>(x: T) => (x ? 1 : 0);
     |                                                ~
---

[TestStrictBooleanExpressionsRule/invalid-48 - 1]
Diagnostic 1: conditionErrorNullableBoolean (3:5 - 3:5)
Message: Unexpected nullable boolean value in conditional. Please handle the nullish case explicitly.
   2 | declare const x: boolean | null;
   3 | if (x) {
     |     ~
   4 | }
---

[TestStrictBooleanExpressionsRule/invalid-49 - 1]
Diagnostic 1: conditionErrorNullableBoolean (1:19 - 1:19)
Message: Unexpected nullable boolean value in conditional. Please handle the nullish case explicitly.
   1 | (x?: boolean) => !x;
     |                   ~
---

[TestStrictBooleanExpressionsRule/invalid-50 - 1]
Diagnostic 1: conditionErrorNullableBoolean (1:50 - 1:50)
Message: Unexpected nullable boolean value in conditional. Please handle the nullish case explicitly.
   1 | <T extends boolean | null | undefined>(x: T) => (x ? 1 : 0);
     |                                                  ~
---

[TestStrictBooleanExpressionsRule/invalid-51 - 1]
Diagnostic 1: conditionErrorNullableObject (3:5 - 3:5)
Message: Unexpected nullable object value in conditional. Please handle the nullish case explicitly.
   2 | declare const x: object | null;
   3 | if (x) {
     |     ~
   4 | }
---

[TestStrictBooleanExpressionsRule/invalid-52 - 1]
Diagnostic 1: conditionErrorNullableObject (1:25 - 1:25)
Message: Unexpected nullable object value in conditional. Please handle the nullish case explicitly.
   1 | (x?: { a: number }) => !x;
     |                         ~
---

[TestStrictBooleanExpressionsRule/invalid-53 - 1]
Diagnostic 1: conditionErrorNullableObject (1:45 - 1:45)
Message: Unexpected nullable object value in conditional. Please handle the nullish case explicitly.
   1 | <T extends {} | null | undefined>(x: T) => (x ? 1 : 0);
     |                                             ~
---

[TestStrictBooleanExpressionsRule/invalid-54 - 1]
Diagnostic 1: conditionErrorNullableString (3:5 - 3:5)
Message: Unexpected nullable string value in conditional. Please handle the nullish and empty string cases explicitly.
   2 | declare const x: string | null;
   3 | if (x) {
     |     ~
   4 | }
---

[TestStrictBooleanExpressionsRule/invalid-55 - 1]
Diagnostic 1: conditionErrorNullableString (1:18 - 1:18)
Message: Unexpected nullable string value in conditional. Please handle the nullish and empty string cases explicitly.
   1 | (x?: string) => !x;
     |                  ~
---

[TestStrictBooleanExpressionsRule/invalid-56 - 1]
Diagnostic 1: conditionErrorNullableString (1:49 - 1:49)
Message: Unexpected nullable string value in conditional. Please handle the nullish and empty string cases explicitly.
   1 | <T extends string | null | undefined>(x: T) => (x ? 1 : 0);
     |                                                 ~
---

[TestStrictBooleanExpressionsRule/invalid-57 - 1]
Diagnostic 1: conditionErrorNullableString (3:8 - 3:8)
Message: Unexpected nullable string value in conditional. Please handle the nullish and empty string cases explicitly.
   2 | function foo(x: '' | 'bar' | null) {
   3 |   if (!x) {
     |        ~
   4 |   }
---

[TestStrictBooleanExpressionsRule/invalid-58 - 1]
Diagnostic 1: conditionErrorNullableNumber (3:5 - 3:5)
Message: Unexpected nullable number value in conditional. Please handle the nullish and zero cases explicitly.
   2 | declare const x: number | null;
   3 | if (x) {
     |     ~
   4 | }
---

[TestStrictBooleanExpressionsRule/invalid-59 - 1]
Diagnostic 1: conditionErrorNullableNumber (1:18 - 1:18)
Message: Unexpected nullable number value in conditional. Please handle the nullish and zero cases explicitly.
   1 | (x?: number) => !x;
     |                  ~
---

[TestStrictBooleanExpressionsRule/invalid-60 - 1]
Diagnostic 1: conditionErrorNullableNumber (1:49 - 1:49)
Message: Unexpected nullable number value in conditional. Please handle the nullish and zero cases explicitly.
   1 | <T extends number | null | undefined>(x: T) => (x ? 1 : 0);
     |                                                 ~
---

[TestStrictBooleanExpressionsRule/invalid-61 - 1]
Diagnostic 1: conditionErrorNullableNumber (3:8 - 3:8)
Message: Unexpected nullable number value in conditional. Please handle the nullish and zero cases explicitly.
   2 | function foo(x: 0 | 1 | null) {
   3 |   if (!x) {
     |        ~
   4 |   }
---

[TestStrictBooleanExpressionsRule/invalid-62 - 1]
Diagnostic 1: conditionErrorNullableEnum (7:13 - 7:19)
Message: Unexpected nullable enum value in conditional. Please handle the nullish and falsy enum cases explicitly.
   6 |         const theEnum = Math.random() < 0.3 ? ExampleEnum.This : null;
   7 |         if (theEnum) {
     |             ~~~~~~~
   8 |         }
---

[TestStrictBooleanExpressionsRule/invalid-63 - 1]
Diagnostic 1: conditionErrorNullableEnum (7:14 - 7:20)
Message: Unexpected nullable enum value in conditional. Please handle the nullish and falsy enum cases explicitly.
   6 |         const theEnum = Math.random() < 0.3 ? ExampleEnum.This : null;
   7 |         if (!theEnum) {
     |              ~~~~~~~
   8 |         }
---

[TestStrictBooleanExpressionsRule/invalid-64 - 1]
Diagnostic 1: conditionErrorNullableEnum (7:14 - 7:20)
Message: Unexpected nullable enum value in conditional. Please handle the nullish and falsy enum cases explicitly.
   6 |         const theEnum = Math.random() < 0.3 ? ExampleEnum.This : null;
   7 |         if (!theEnum) {
     |              ~~~~~~~
   8 |         }
---

[TestStrictBooleanExpressionsRule/invalid-65 - 1]
Diagnostic 1: conditionErrorNullableEnum (7:14 - 7:20)
Message: Unexpected nullable enum value in conditional. Please handle the nullish and falsy enum cases explicitly.
   6 |         const theEnum = Math.random() < 0.3 ? ExampleEnum.This : null;
   7 |         if (!theEnum) {
     |              ~~~~~~~
   8 |         }
---

[TestStrictBooleanExpressionsRule/invalid-66 - 1]
Diagnostic 1: conditionErrorNullableEnum (7:14 - 7:20)
Message: Unexpected nullable enum value in conditional. Please handle the nullish and falsy enum cases explicitly.
   6 |         const theEnum = Math.random() < 0.3 ? ExampleEnum.This : null;
   7 |         if (!theEnum) {
     |              ~~~~~~~
   8 |         }
---

[TestStrictBooleanExpressionsRule/invalid-67 - 1]
Diagnostic 1: conditionErrorNullableEnum (7:14 - 7:20)
Message: Unexpected nullable enum value in conditional. Please handle the nullish and falsy enum cases explicitly.
   6 |         const theEnum = Math.random() < 0.3 ? ExampleEnum.This : null;
   7 |         if (!theEnum) {
     |              ~~~~~~~
   8 |         }
---

[TestStrictBooleanExpressionsRule/invalid-68 - 1]
Diagnostic 1: conditionErrorNullableEnum (7:14 - 7:20)
Message: Unexpected nullable enum value in conditional. Please handle the nullish and falsy enum cases explicitly.
   6 |         const theEnum = Math.random() < 0.3 ? ExampleEnum.This : null;
   7 |         if (!theEnum) {
     |              ~~~~~~~
   8 |         }
---

[TestStrictBooleanExpressionsRule/invalid-69 - 1]
Diagnostic 1: conditionErrorNullableEnum (6:35 - 6:39)
Message: Unexpected nullable enum value in conditional. Please handle the nullish and falsy enum cases explicitly.
   5 |         }
   6 |         (value?: ExampleEnum) => (value ? 1 : 0);
     |                                   ~~~~~
   7 |       
---

[TestStrictBooleanExpressionsRule/invalid-70 - 1]
Diagnostic 1: conditionErrorNullableEnum (6:36 - 6:40)
Message: Unexpected nullable enum value in conditional. Please handle the nullish and falsy enum cases explicitly.
   5 |         }
   6 |         (value?: ExampleEnum) => (!value ? 1 : 0);
     |                                    ~~~~~
   7 |       
---

[TestStrictBooleanExpressionsRule/invalid-71 - 1]
Diagnostic 1: conditionErrorNullableEnum (6:36 - 6:40)
Message: Unexpected nullable enum value in conditional. Please handle the nullish and falsy enum cases explicitly.
   5 |         }
   6 |         (value?: ExampleEnum) => (!value ? 1 : 0);
     |                                    ~~~~~
   7 |       
---

[TestStrictBooleanExpressionsRule/invalid-72 - 1]
Diagnostic 1: conditionErrorNullableEnum (6:36 - 6:40)
Message: Unexpected nullable enum value in conditional. Please handle the nullish and falsy enum cases explicitly.
   5 |         }
   6 |         (value?: ExampleEnum) => (!value ? 1 : 0);
     |                                    ~~~~~
   7 |       
---

[TestStrictBooleanExpressionsRule/invalid-73 - 1]
Diagnostic 1: conditionErrorAny (2:5 - 2:5)
Message: Unexpected any value in conditional. Use a more specific type to ensure type safety.
   1 | 
   2 | if (x) {
     |     ~
   3 | }
---

[TestStrictBooleanExpressionsRule/invalid-74 - 1]
Diagnostic 1: conditionErrorAny (1:7 - 1:7)
Message: Unexpected any value in conditional. Use a more specific type to ensure type safety.
   1 | x => !x;
     |       ~
---

[TestStrictBooleanExpressionsRule/invalid-75 - 1]
Diagnostic 1: conditionErrorAny (1:27 - 1:27)
Message: Unexpected any value in conditional. Use a more specific type to ensure type safety.
   1 | <T extends any>(x: T) => (x ? 1 : 0);
     |                           ~
---

[TestStrictBooleanExpressionsRule/invalid-76 - 1]
Diagnostic 1: conditionErrorAny (1:16 - 1:16)
Message: Unexpected any value in conditional. Use a more specific type to ensure type safety.
   1 | <T,>(x: T) => (x ? 1 : 0);
     |                ~
---

[TestStrictBooleanExpressionsRule/invalid-77 - 1]
Diagnostic 1: noStrictNullCheck
Message: This rule requires the `strictNullChecks` compiler option to be turned on to function correctly.

Diagnostic 2: conditionErrorObject (3:5 - 3:5)
Message: Unexpected object value in conditional. An object is always truthy.
   2 | declare const x: string[] | null;
   3 | if (x) {
     |     ~
   4 | }
---

[TestStrictBooleanExpressionsRule/invalid-78 - 1]
Diagnostic 1: conditionErrorNullableObject (3:10 - 3:12)
Message: Unexpected nullable object value in conditional. Please handle the nullish case explicitly.
   2 |         declare const obj: { x: number } | null;
   3 |         !obj ? 1 : 0
     |          ~~~
   4 |         !obj

Diagnostic 2: conditionErrorNullableObject (4:10 - 4:12)
Message: Unexpected nullable object value in conditional. Please handle the nullish case explicitly.
   3 |         !obj ? 1 : 0
   4 |         !obj
     |          ~~~
   5 |         obj || 0

Diagnostic 3: conditionErrorNullableObject (5:9 - 5:11)
Message: Unexpected nullable object value in conditional. Please handle the nullish case explicitly.
   4 |         !obj
   5 |         obj || 0
     |         ~~~
   6 |         obj && 1 || 0

Diagnostic 4: conditionErrorNullableObject (6:9 - 6:11)
Message: Unexpected nullable object value in conditional. Please handle the nullish case explicitly.
   5 |         obj || 0
   6 |         obj && 1 || 0
     |         ~~~
   7 |       
---

[TestStrictBooleanExpressionsRule/invalid-79 - 1]
Diagnostic 1: conditionErrorNullableString (4:8 - 4:21)
Message: Unexpected nullable string value in conditional. Please handle the nullish and empty string cases explicitly.
   3 | declare const nullableString: string | null;
   4 | assert(nullableString);
     |        ~~~~~~~~~~~~~~
   5 |       
---

[TestStrictBooleanExpressionsRule/invalid-80 - 1]
Diagnostic 1: conditionErrorNullableString (4:13 - 4:26)
Message: Unexpected nullable string value in conditional. Please handle the nullish and empty string cases explicitly.
   3 | declare const nullableString: string | null;
   4 | assert(foo, nullableString);
     |             ~~~~~~~~~~~~~~
   5 |       
---

[TestStrictBooleanExpressionsRule/invalid-81 - 1]
Diagnostic 1: conditionErrorNullableString (5:13 - 5:26)
Message: Unexpected nullable string value in conditional. Please handle the nullish and empty string cases explicitly.
   4 | declare const nullableString: string | null;
   5 | assert(foo, nullableString);
     |             ~~~~~~~~~~~~~~
   6 |       
---

[TestStrictBooleanExpressionsRule/invalid-82 - 1]
Diagnostic 1: conditionErrorNullableString (4:13 - 4:26)
Message: Unexpected nullable string value in conditional. Please handle the nullish and empty string cases explicitly.
   3 | declare const nullableString: string | null;
   4 | assert(foo, nullableString);
     |             ~~~~~~~~~~~~~~
   5 |       
---

[TestStrictBooleanExpressionsRule/invalid-83 - 1]
Diagnostic 1: conditionErrorNullableString (10:12 - 10:22)
Message: Unexpected nullable string value in conditional. Please handle the nullish and empty string cases explicitly.
   9 | 
  10 | someAssert(maybeString);
     |            ~~~~~~~~~~~
  11 |       
---

[TestStrictBooleanExpressionsRule/invalid-84 - 1]
Diagnostic 1: conditionErrorNullableString (18:18 - 18:31)
Message: Unexpected nullable string value in conditional. Please handle the nullish and empty string cases explicitly.
  17 | declare const nullableString: string | null;
  18 | assert(3 as any, nullableString);
     |                  ~~~~~~~~~~~~~~
  19 |       
---

[TestStrictBooleanExpressionsRule/invalid-85 - 1]
Diagnostic 1: conditionErrorNullableString (19:18 - 19:31)
Message: Unexpected nullable string value in conditional. Please handle the nullish and empty string cases explicitly.
  18 | declare const nullableString: string | null;
  19 | assert(3 as any, nullableString, 'more', 'args', 'afterwards');
     |                  ~~~~~~~~~~~~~~
  20 |       
---

[TestStrictBooleanExpressionsRule/invalid-86 - 1]
Diagnostic 1: conditionErrorNullableString (6:13 - 6:26)
Message: Unexpected nullable string value in conditional. Please handle the nullish and empty string cases explicitly.
   5 | declare const boo: boolean;
   6 | assert(boo, nullableString);
     |             ~~~~~~~~~~~~~~
   7 |       
---

[TestStrictBooleanExpressionsRule/invalid-87 - 1]
Diagnostic 1: conditionErrorNullableString (8:8 - 8:21)
Message: Unexpected nullable string value in conditional. Please handle the nullish and empty string cases explicitly.
   7 | declare const nullableString: string | null;
   8 | assert(nullableString);
     |        ~~~~~~~~~~~~~~
   9 |       
---

[TestStrictBooleanExpressionsRule/invalid-88 - 1]
Diagnostic 1: conditionErrorString (2:1 - 4:2)
Message: Unexpected string value in conditional. A string can be falsy (empty string) or truthy.
   1 | 
   2 | ['one', 'two', ''].find(x => {
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   3 |   return x;
     | ~~~~~~~~~~~
   4 | });
     | ~~
   5 |       
---

[TestStrictBooleanExpressionsRule/invalid-89 - 1]
Diagnostic 1: conditionErrorNullish (2:1 - 4:2)
Message: Unexpected nullish value in conditional. The expression is always falsy.
   1 | 
   2 | ['one', 'two', ''].find(x => {
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   3 |   return;
     | ~~~~~~~~~
   4 | });
     | ~~
   5 |       
---

[TestStrictBooleanExpressionsRule/invalid-90 - 1]
Diagnostic 1: conditionErrorNullish (2:1 - 4:2)
Message: Unexpected nullish value in conditional. The expression is always falsy.
   1 | 
   2 | ['one', 'two', ''].findLast(x => {
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   3 |   return undefined;
     | ~~~~~~~~~~~~~~~~~~~
   4 | });
     | ~~
   5 |       
---

[TestStrictBooleanExpressionsRule/invalid-91 - 1]
Diagnostic 1: conditionErrorNullableBoolean (2:1 - 6:2)
Message: Unexpected nullable boolean value in conditional. Please handle the nullish case explicitly.
   1 | 
   2 | ['one', 'two', ''].find(x => {
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   3 |   if (x) {
     | ~~~~~~~~~~
   4 |     return Math.random() > 0.5;
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   5 |   }
     | ~~~
   6 | });
     | ~~
   7 |       
---

[TestStrictBooleanExpressionsRule/invalid-92 - 1]
Diagnostic 1: conditionErrorNullableBoolean (8:1 - 8:34)
Message: Unexpected nullable boolean value in conditional. Please handle the nullish case explicitly.
   7 | 
   8 | ['one', 'two', ''].find(predicate);
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   9 |       
---

[TestStrictBooleanExpressionsRule/invalid-93 - 1]
Diagnostic 1: predicateCannotBeAsync (2:17 - 4:1)
Message: Predicate function should not be 'async'; expected a boolean return type.
   1 | 
   2 | [1, null].every(async x => {
     |                 ~~~~~~~~~~~~
   3 |   return x != null;
     | ~~~~~~~~~~~~~~~~~~~
   4 | });
     | ~
   5 |       
---

[TestStrictBooleanExpressionsRule/invalid-94 - 1]
Diagnostic 1: conditionErrorObject (6:1 - 6:26)
Message: Unexpected object value in conditional. An object is always truthy.
   5 | 
   6 | [1, null].every(predicate);
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~
   7 |       
---

[TestStrictBooleanExpressionsRule/invalid-95 - 1]
Diagnostic 1: conditionErrorOther (2:1 - 4:2)
Message: Unexpected value in conditional. A union of different types has inconsistent truthiness.
   1 | 
   2 | [1, null].every((x): boolean | number => {
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   3 |   return x != null;
     | ~~~~~~~~~~~~~~~~~~~
   4 | });
     | ~~
   5 |       
---

[TestStrictBooleanExpressionsRule/invalid-96 - 1]
Diagnostic 1: conditionErrorNullableBoolean (2:1 - 4:2)
Message: Unexpected nullable boolean value in conditional. Please handle the nullish case explicitly.
   1 | 
   2 | [1, null].every((x): boolean | undefined => {
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   3 |   return x != null;
     | ~~~~~~~~~~~~~~~~~~~
   4 | });
     | ~~
   5 |       
---

[TestStrictBooleanExpressionsRule/invalid-97 - 1]
Diagnostic 1: conditionErrorNullish (2:1 - 2:29)
Message: Unexpected nullish value in conditional. The expression is always falsy.
   1 | 
   2 | [1, null].every((x, i) => {});
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   3 |       
---

[TestStrictBooleanExpressionsRule/invalid-98 - 1]
Diagnostic 1: conditionErrorNullish (2:1 - 2:45)
Message: Unexpected nullish value in conditional. The expression is always falsy.
   1 | 
   2 | [() => {}, null].every((x: () => void) => {});
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   3 |       
---

[TestStrictBooleanExpressionsRule/invalid-99 - 1]
Diagnostic 1: conditionErrorNullish (2:1 - 2:51)
Message: Unexpected nullish value in conditional. The expression is always falsy.
   1 | 
   2 | [() => {}, null].every(function (x: () => void) {});
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   3 |       
---

[TestStrictBooleanExpressionsRule/invalid-100 - 1]
Diagnostic 1: conditionErrorNullish (2:1 - 2:32)
Message: Unexpected nullish value in conditional. The expression is always falsy.
   1 | 
   2 | [() => {}, null].every(() => {});
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   3 |       
---

[TestStrictBooleanExpressionsRule/invalid-101 - 1]
Diagnostic 1: conditionErrorOther (5:1 - 5:14)
Message: Unexpected value in conditional. A union of different types has inconsistent truthiness.
   4 | 
   5 | [35].filter(f);
     | ~~~~~~~~~~~~~~
   6 |       
---

[TestStrictBooleanExpressionsRule/invalid-102 - 1]
Diagnostic 1: conditionErrorOther (6:1 - 6:14)
Message: Unexpected value in conditional. A union of different types has inconsistent truthiness.
   5 | 
   6 | [35].filter(f);
     | ~~~~~~~~~~~~~~
   7 |       
---

[TestStrictBooleanExpressionsRule/invalid-103 - 1]
Diagnostic 1: conditionErrorAny (3:1 - 3:20)
Message: Unexpected any value in conditional. Use a more specific type to ensure type safety.
   2 | declare function foo<T>(x: number): T;
   3 | [1, null].every(foo);
     | ~~~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestStrictBooleanExpressionsRule/invalid-104 - 1]
Diagnostic 1: conditionErrorNumber (3:1 - 3:20)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   2 | function foo<T extends number>(x: number): T {}
   3 | [1, null].every(foo);
     | ~~~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestStrictBooleanExpressionsRule/invalid-105 - 1]
Diagnostic 1: conditionErrorNullableString (3:1 - 3:39)
Message: Unexpected nullable string value in conditional. Please handle the nullish and empty string cases explicitly.
   2 | declare const nullOrString: string | null;
   3 | ['one', null].filter(x => nullOrString);
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestStrictBooleanExpressionsRule/invalid-106 - 1]
Diagnostic 1: conditionErrorNullableString (3:28 - 3:39)
Message: Unexpected nullable string value in conditional. Please handle the nullish and empty string cases explicitly.
   2 | declare const nullOrString: string | null;
   3 | ['one', null].filter(x => !nullOrString);
     |                            ~~~~~~~~~~~~
   4 |       
---

[TestStrictBooleanExpressionsRule/invalid-107 - 1]
Diagnostic 1: conditionErrorAny (3:1 - 3:35)
Message: Unexpected any value in conditional. Use a more specific type to ensure type safety.
   2 | declare const anyValue: any;
   3 | ['one', null].filter(x => anyValue);
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestStrictBooleanExpressionsRule/invalid-108 - 1]
Diagnostic 1: conditionErrorNullableBoolean (3:1 - 3:39)
Message: Unexpected nullable boolean value in conditional. Please handle the nullish case explicitly.
   2 | declare const nullOrBoolean: boolean | null;
   3 | [true, null].filter(x => nullOrBoolean);
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestStrictBooleanExpressionsRule/invalid-109 - 1]
Diagnostic 1: conditionErrorNullableEnum (7:1 - 7:27)
Message: Unexpected nullable enum value in conditional. Please handle the nullish and falsy enum cases explicitly.
   6 | const theEnum = Math.random() < 0.3 ? ExampleEnum.This : null;
   7 | [0, 1].filter(x => theEnum);
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~
   8 |       
---

[TestStrictBooleanExpressionsRule/invalid-110 - 1]
Diagnostic 1: conditionErrorNullableNumber (3:1 - 3:35)
Message: Unexpected nullable number value in conditional. Please handle the nullish and zero cases explicitly.
   2 | declare const nullOrNumber: number | null;
   3 | [0, null].filter(x => nullOrNumber);
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestStrictBooleanExpressionsRule/invalid-111 - 1]
Diagnostic 1: conditionErrorObject (3:1 - 3:39)
Message: Unexpected object value in conditional. An object is always truthy.
   2 | const objectValue: object = {};
   3 | [{ a: 0 }, {}].filter(x => objectValue);
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestStrictBooleanExpressionsRule/invalid-112 - 1]
Diagnostic 1: conditionErrorObject (3:1 - 5:2)
Message: Unexpected object value in conditional. An object is always truthy.
   2 | const objectValue: object = {};
   3 | [{ a: 0 }, {}].filter(x => {
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |   return objectValue;
     | ~~~~~~~~~~~~~~~~~~~~~
   5 | });
     | ~~
   6 |       
---

[TestStrictBooleanExpressionsRule/invalid-113 - 1]
Diagnostic 1: conditionErrorNullableObject (3:1 - 3:42)
Message: Unexpected nullable object value in conditional. Please handle the nullish case explicitly.
   2 | declare const nullOrObject: object | null;
   3 | [{ a: 0 }, null].filter(x => nullOrObject);
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestStrictBooleanExpressionsRule/invalid-114 - 1]
Diagnostic 1: conditionErrorNumber (3:1 - 3:34)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   2 | const numbers: number[] = [1];
   3 | [1, 2].filter(x => numbers.length);
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestStrictBooleanExpressionsRule/invalid-115 - 1]
Diagnostic 1: conditionErrorNumber (3:1 - 3:31)
Message: Unexpected number value in conditional. A number can be falsy (0, NaN) or truthy.
   2 | const numberValue: number = 1;
   3 | [1, 2].filter(x => numberValue);
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestStrictBooleanExpressionsRule/invalid-116 - 1]
Diagnostic 1: conditionErrorString (3:1 - 3:40)
Message: Unexpected string value in conditional. A string can be falsy (empty string) or truthy.
   2 | const stringValue: string = 'hoge';
   3 | ['hoge', 'foo'].filter(x => stringValue);
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |       
---
